# CHRONOLITH-by-Ethernium

./: .gitattributes  .gitignore  AGENT_START.md  BENCHMARKS.md  BUILD_DISCIPLINE.md  CASE_STUDY_DRIFT.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  ETHERNIUM_UNIVERSAL_DNA.md  Ethernium_Portal_Outside.json  GETTING_STARTED.md  GITHUB_PROFILE_README_DRAFT.md  GOVERNANCE.md  HOW_TO_USE_DASHBOARD.md  HOW_TO_USE_IT.md  LIVE_HANDOFF.md  LORE.md  PROJECT_CONTEXT.md  PROJECT_DNA.ene.md  PROJECT_DNA.ene.md.locked  PROJECT_DNA.md  README.md  RELEASE_NOTES_MANIFEST.md  RELEASE_STAGING_PLAN.md  REPO_AND_PYPI_RELEASE_CHECKLIST.md  SECURITY.md  SESSION_LOG.md  SESSION_TOKEN_REPORT.md  STATE.json  TROUBLESHOOTING.md  USE_CASES.md  VERSION  byte_healer.py  conftest.py  continuity_dashboard.html  continuity_legacy.json  deb2f4f_manifest.md  deploy_pypi.ps1  final_sovereignty_fix.py  (+18 more)
CONTINUITY LEGACY Lite/: .gitignore  LICENSE  README.md  install_lite.ps1  pyproject.toml
CONTINUITY LEGACY Lite/tools/continuity_legacy/: run_continuity_lite.py  sync_translations.py
CONTINUITY LEGACY Omega/: README.md  pyproject.toml
CONTINUITY LEGACY Omega/tools/continuity_legacy/: README.md  cognitive_map.py  hook_utils.py  omega_engine.py  run_continuity_omega.py  sync_translations.py
CONTINUITY LEGACY Pro/: .gitignore  CHANGELOG.md  LICENSE  PROJECT_CONTEXT.md  README.md  ROADMAP.md  SECURITY.md  STATE.json  continuity_legacy.json  pyproject.toml
CONTINUITY LEGACY Pro/.continuity/: AGENT_ACTIVATION_PROTOCOL.md  TIMELINE.md
CONTINUITY LEGACY Pro/.continuity/registry/: README.md
CONTINUITY LEGACY Pro/.continuity/templates/: README.md
CONTINUITY LEGACY Pro/.github/workflows/: continuity.yml
CONTINUITY LEGACY Pro/OTHER_LANGUAGES/de/: TROUBLESHOOTING.md
CONTINUITY LEGACY Pro/OTHER_LANGUAGES/es/: TROUBLESHOOTING.md  USE_CASES.md
CONTINUITY LEGACY Pro/OTHER_LANGUAGES/fr/: README.md
CONTINUITY LEGACY Pro/OTHER_LANGUAGES/it/: README.md  USE_CASES.md
CONTINUITY LEGACY Pro/OTHER_LANGUAGES/ja/: TROUBLESHOOTING.md
CONTINUITY LEGACY Pro/examples/sample_project/: STATE.json
CONTINUITY LEGACY Pro/hooks/: pre-push
CONTINUITY LEGACY Pro/outputs/continuity/: context_bootstrap_summary.json  continuity_cycle_report.json  encoding_report.json
CONTINUITY LEGACY Pro/tests/: test_parity_logic.py
CONTINUITY LEGACY Pro/tools/continuity_legacy/: archive_manager.py  continuity_suggest.py  decision_engine.py  encoding_sanitizer.py  run_continuity_cycle.py  update_memory.py
chronolith-lite/: .gitignore  LIVE_HANDOFF.md  PROJECT_CONTEXT.md  README.md  install_lite.ps1  pyproject.toml  run_chronolith_lite.py
chronolith-lite/OTHER_LANGUAGES/: README_ar.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_zh.md
chronolith-lite/chronolith_lite/chronolith/: run_chronolith_lite.py  sync_translations.py
chronolith-lite/examples/: basic_session.py  dna_inspection.py  setup_dna_guardian.py
chronolith-lite/tests/: test_lite_logic.py
chronolith-omega/: PROJECT_CONTEXT.md  README.md  pyproject.toml  run_chronolith_omega.py
chronolith-omega/OTHER_LANGUAGES/: README_ar.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_zh.md
chronolith-omega/chronolith_omega/chronolith/: README.md  archive_manager.py  automation_common.py  bootstrap_project.py  cognitive_map.py  (+15 more)
chronolith-omega/tests/: test_omega_logic.py  test_parity_logic.py
chronolith-pro/: AGENT_START.md  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  SECURITY.md  SOVEREIGN_SECURITY.md  STATE.json  TROUBLESHOOTING.md  USE_CASES.md  continuity_legacy.json  pyproject.toml  run_chronolith_pro.py
chronolith-pro/.chronolith/: AGENT_ACTIVATION_PROTOCOL.md  BOOT_SEQUENCE.md  BYPASS_LOG.md  CONTEXT_CONTINUITY.md  DECISIONS_LOG.md  LIVE_HANDOFF.md  README.md  STATE.json  TIMELINE.md  dna_chain.jsonl  hash_cache.json  pro_report.json
chronolith-pro/OTHER_LANGUAGES/: README_ar.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_zh.md
chronolith-pro/examples/: README.md
chronolith-pro/hooks/: pre-commit
chronolith-pro/outputs/: README.md
chronolith-pro/tests/: test_anchor.py  test_cli_surface.py  test_integrity.py  test_logic.py  test_parity_logic.py  test_secret_detector.py  test_vault.py  test_verify.py
continuity-lite/: LIVE_HANDOFF.md  PROJECT_CONTEXT.md  README.md  STATE.json  pyproject.toml  run_continuity_lite.py
continuity-lite/OTHER_LANGUAGES/: README_de.md  README_en.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_pt.md  README_ru.md  README_zh.md
continuity-lite/examples/: basic_session.py  dna_inspection.py  setup_dna_guardian.py
continuity-lite/tests/: test_lite_dna.py  test_lite_logic.py
continuity-omega/: PROJECT_CONTEXT.md  README.md  pyproject.toml  run_continuity_omega.py
continuity-omega/OTHER_LANGUAGES/: README_de.md  README_en.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_pt.md  README_ru.md  README_zh.md
continuity-omega/tests/: test_omega_logic.py  test_parity_logic.py
continuity-pro/: AGENT_START.md  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  PROJECT_CONTEXT.md  README.md  ROADMAP.md  SECURITY.md  SOVEREIGN_SECURITY.md  STATE.json  TROUBLESHOOTING.md  continuity_legacy.json  pyproject.toml  run_continuity_pro.py
continuity-pro/.continuity/: AGENT_ACTIVATION_PROTOCOL.md  BOOT_SEQUENCE.md  BYPASS_LOG.md  CONTEXT_CONTINUITY.md  DECISIONS_LOG.md  LIVE_HANDOFF.md  README.md  TIMELINE.md
continuity-pro/OTHER_LANGUAGES/: README_de.md  README_en.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_pt.md  README_ru.md  README_zh.md
continuity-pro/examples/: README.md
continuity-pro/hooks/: pre-push
continuity-pro/outputs/: README.md
continuity-pro/tests/: test_anchor.py  test_integrity.py  test_logic.py  test_parity_logic.py  test_vault.py  test_verify.py
(+412 files in other folders)
