[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuity-legacy"
version = "2.1.0"
authors = [
  { name = "SteveBlackbeard" },
]
description = "Continuity Legacy: Persistent Cognitive Layer for AI context handoffs. Includes Lite, Pro, and Omega profiles."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CONTINUITY-LEGACY-by-Ethernium"

[project.scripts]
continuity = "continuity_pro.continuity_legacy.run_continuity_cycle:main"
continuity-lite = "continuity_lite.continuity_legacy.run_continuity_lite:main"
continuity-pro = "continuity_pro.continuity_legacy.run_continuity_cycle:main"
continuity-omega = "continuity_omega.continuity_legacy.run_continuity_omega:main"

[tool.setuptools.packages.find]
where = ["continuity-lite", "continuity-pro", "continuity-omega"]
include = ["continuity_lite*", "continuity_pro*", "continuity_omega*"]
