[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuity-legacy-omega"
version = "5.0.0"
authors = [
  { name = "SteveBlackbeard" },
]
description = "The pinnacle edition of Continuity Legacy with RAG and Knowledge Graphs."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "chromadb>=0.4.0",
    "networkx>=3.0",
    "sentence-transformers",
]

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CONTINUITY-LEGACY-by-Ethernium"

[project.scripts]
continuity-legacy-omega = "tools.continuity_legacy.run_continuity_omega:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]
