[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronolith-lite"
version = "3.2.0"
authors = [
  { name = "SteveBlackbeard" },
]
description = "Chronolith (Lite): A professional AI continuity framework for zero-friction context handoffs."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CHRONOLITH-by-Ethernium"

[project.scripts]
chronolith-lite = "chronolith_lite.chronolith.run_chronolith_lite:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronolith_lite*"]
