[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronolith-omega"
version = "3.2.1"
authors = [
  { name = "SteveBlackbeard" },
]
description = "Chronolith (Omega): Enterprise Oracle. Advanced RAG, cognitive maps, and proactive impact analysis."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "networkx>=3.0",
    "sentence-transformers",
]

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CHRONOLITH-by-Ethernium"

[project.scripts]
chronolith-omega = "chronolith_omega.chronolith.run_chronolith_omega:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronolith_omega*"]
