[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chronolith-pro"
version = "3.2.0"
authors = [
  { name = "SteveBlackbeard" },
]
description = "Chronolith (Pro): Industrial-grade AI chronolith framework with security audits and global synchronization."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
vector = ["chromadb>=0.4.0", "sentence-transformers"]
anchor = ["opentimestamps>=0.4.0"]
all = ["chromadb>=0.4.0", "sentence-transformers", "networkx", "rdflib", "opentimestamps>=0.4.0"]

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CHRONOLITH-by-Ethernium"
"Bug Tracker" = "https://github.com/SteveBlackbeard/CHRONOLITH-by-Ethernium/issues"

[project.scripts]
chronolith-pro = "chronolith_pro.chronolith.run_chronolith_cycle:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronolith_pro*"]
