[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "continuity-lite"
version = "2.1.0"
authors = [
  { name = "SteveBlackbeard" },
]
description = "A lightweight AI continuity framework for context handoff."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CONTINUITY-LEGACY-by-Ethernium"

[project.scripts]
continuity-lite = "continuity_lite.continuity_legacy.run_continuity_lite:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["continuity_lite*"]


