[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethernium-continuity-lite"
version = "2.1.0"
authors = [
  { name = "SteveBlackbeard" },
]
description = "Continuity Legacy (Lite): A professional AI continuity framework for zero-friction context handoffs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CONTINUITY-LEGACY-by-Ethernium"

[project.scripts]
continuity-lite = "continuity_lite.continuity_legacy.run_continuity_lite:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["continuity_lite*"]


