[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethernium-continuity-omega"
version = "3.0.2"
authors = [
  { name = "SteveBlackbeard" },
]
description = "Continuity Legacy (Omega): Enterprise Oracle. Advanced RAG, cognitive maps, and proactive impact analysis."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "chromadb>=0.4.0",
    "networkx>=3.0",
    "sentence-transformers",
]

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CONTINUITY-LEGACY-by-Ethernium"

[project.scripts]
continuity-omega = "continuity_omega.continuity_legacy.run_continuity_omega:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["continuity_omega*"]
