[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ethernium-continuity-pro"
version = "3.2.0"
authors = [
  { name = "SteveBlackbeard" },
]
description = "Continuity Legacy (Pro): Industrial-grade AI continuity framework with security audits and global synchronization."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tiktoken>=0.5.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
vector = ["chromadb>=0.4.0", "sentence-transformers"]
all = ["chromadb>=0.4.0", "sentence-transformers", "networkx", "rdflib"]

[project.urls]
"Homepage" = "https://github.com/SteveBlackbeard/CONTINUITY-LEGACY-by-Ethernium"
"Bug Tracker" = "https://github.com/SteveBlackbeard/CONTINUITY-LEGACY-by-Ethernium/issues"

[project.scripts]
continuity-pro = "continuity_pro.continuity_legacy.run_continuity_cycle:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["continuity_pro*"]
